--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lokijs",
-  "version": "1.5.0",
-  "description": "Fast document oriented javascript in-memory database",
+  "version": "1.5.0-mini",
+  "description": "Fast document oriented javascript in-memory database (mini)",
   "homepage": "http://lokijs.org",
   "main": "src/lokijs.js",
   "directories": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/techfort/LokiJS.git"
+    "url": "https://github.com/reflog/LokiJS.git"
   },
   "keywords": [
     "javascript",
@@ -24,7 +24,6 @@
     "lint": "jshint src",
     "test:browser": "karma start karma.conf.js --single-run",
     "test:node": "istanbul cover --dir coverage/nodejs node_modules/jasmine/bin/jasmine.js",
-    "pretest": "npm run lint",
     "test": "npm run test:browser && npm run test:node",
     "build:lokijs": "uglifyjs src/lokijs.js > build/lokijs.min.js",
     "build:indexedAdapter": "uglifyjs src/loki-indexed-adapter.js > build/loki-indexed-adapter.min.js",
@@ -37,13 +36,15 @@
     "benchmark": "node benchmark/benchmark"
   },
   "author": "Joe Minichino <joe.minichino@gmail.com>",
-  "contributors": [{
-    "name": "Dave",
-    "email": "github@obeliskos.com"
-  }],
+  "contributors": [
+    {
+      "name": "Dave",
+      "email": "github@obeliskos.com"
+    }
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/techfort/LokiJS/issues"
+    "url": "https://github.com/reflog/LokiJS/issues"
   },
   "dependencies": {},
   "devDependencies": {
